--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,25 @@
 ---
 import Layout from "../components/Layout.astro";
+import Article from "../components/Article.astro";
 ---
 
 <Layout title="My Astro Blog">
 	<h1>Welcome to My Blog</h1>
 	<p>Check out my latest posts!</p>
 
-	<article>
-		<h2>My First Blog Post</h2>
-		<p><strong>Published on:</strong> March 2, 2025</p>
-		<p>Welcome to my blog post on this astro site I will be talking about...</p>
-		<a href="#">Read more...</a>
-	</article>
+	<Article
+		title="My First Blog Post"
+		date="March 2, 2025"
+		content="Welcome to my first blog post using Astro! In this article I will talk about my dog."
+		link="#"
+	/>
 
-	<article>
-		<h2>Second Blog Post</h2>
-		<p><strong>Published on:</strong> March 5, 2025</p>
-		<p>This is the second blog post.</p>
-		<a href="#">Read more...</a>
-	</article>
+	<Article
+		title="My second post"
+		date="March 5, 2025"
+		content="I'm using components to make these articles!!"
+		link="#"
+	/>
+
 </Layout>
+
